- #289888 Nodereference: Fix 'full node' and 'teaser' formatters.
- #289138 by dopry: Add support for 'locked' fields (for module-defined fields).
- Display field type human names instead of machine names on 'Manage Fields' and 'Fields' overview pages.
- #292884 Better help text for field template suggestions.

CCK 6.2.rc4
===========

This RC Mainly fixes a critical bug :
http://www.drupal.org/node/277968 - Saving 'Display Fields' wipes widget settings.

- #278325 Nodereference/Userreference - autocomplete widget does not check nodes/users are 'referenceable'.
- #278325 followup: Unify the mechanism used to assign hook_field('validate') errors to form elements across fields and widgets.
- Userreference - Turn the 'Reverse link' radios into a checkbox in the field settings.
- Nodereference - Only list 'node' Views in the 'advanced mode', and differenciate default views as in D5.
- Optionwidgets - fix PHP warning when creating a new 'on/off checkbox' and no allowed values could be set yet.
- Optionwidgets - fix PHP warning on 'on/off checkbox' only one 'allowed value'.
- Optionwidgets - add a 'warning' message to remind the admins they need to set allowed values.
- #278676 by hass: fix untranslated field and widget type names.
- Do not validate the fields settings form when the 'change label / widget' submits the form.
- #273502 Let the 'menu settings' node-form fieldset on node forms be repositioned.
- #273502 followup: add a description for non-CCK 'fields' on 'Manage fields' tab.
- #278793 by hass: fix untranslated PHP code example.
- Nodereference/Userreference - There were two 'no selection' choices on 'select list' widget for non-required fields.
- #277486 Nodereference/Userreference - no selection with 'select list' widget stores 0 instead of NULL.
- #278789 better wording for the 'PHP default value invalid' error message.
- #267771 orignal patch by quicksketch: Richer label settings for views fields.
- #279204 by eMPee584: fix edit paths inconsistency.